# something

./: .gitignore  HANDOVER.md  README.md  config.yaml  install.sh  main.py  oem_install.sh  pyproject.toml  test.py  test2.py  txt.txt
api/: __init__.py  auth.py  deps.py  test_api.py
api/v1/: __init__.py  characters.py
api/websocket/: __init__.py
book-tracker-frontend/: package.json
book-tracker-frontend/app/: globals.css  layout.tsx  page.tsx
book-tracker-frontend/components/: add-book-modal.tsx  book-card.tsx  book-detail-modal.tsx  book-grid.tsx  status-filter.tsx
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
hub-server/: main.py  requirements.txt
hub-server/app/: __init__.py  config.py
install/: common.sh  firstrun.sh  install_audio.sh  install_dependencies.sh  install_env.sh  install_frontend.sh  install_gpio.sh  install_livekit.sh  install_mediapipe.sh  install_motors.sh  install_ollama.sh  install_piper.sh  install_python.sh  install_raspotify.sh  install_repository.sh  install_rgb.sh  install_rpi_connect.sh  install_service.sh  install_sudoers.sh  install_tailscale.sh  install_udev.sh  install_uv.sh  install_wifi_ap.sh  install_ws281x_kernel_module.sh  setup_motors.py  wifi_fallback.sh
lelamp/: calibrate.py  globals.py  list_recordings.py  motor_utils.py  record.py  replay.py  turn_off.py  user_data.py
lelamp/follower/: config_lelamp_follower.py  lelamp_follower.py
lelamp/functions/: __init__.py  animation_functions.py  audio_functions.py  (+9 more)
model-implementation/: main.py  requirements.txt  setup_assistant.py  test_api.py
scripts/: setup_audio_loopback.sh
system/: config.example.yaml  lelamp-sudoers
(+200 files in other folders)
